src/objects/Zuora_Import__c.object
<CustomObject>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContextData__c</fullName>
        <label>ContextData</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <label>File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportType__c</fullName>
        <label>ImportType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Grouping__c</fullName>
        <label>Report Grouping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <description>Import job tracking for Zuora</description>
    <label>Zuora Import</label>
    <nameField>
        <label>Zuora Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zuora Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ImportType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/11/2016 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>